@@ -36,7 +36,7 @@
             <param name="latex0" value="#ffffff,\frac{4}{7} \cdot,#a0c0f0, \frac{3}{4} \: =\:,input,\:\approx\:,input">
 	    <param name="latex1" value="vspace"><!-- a blanc line : 50% of inputheight -->
 	    <param name="latex2" value="#00ccff"><!-- change latex fgcolor -->
-            <param name="latex3" value="\left[ \begin{array}{l} x = \frac{3}{4} \\ y = \frac{5}{6}\end{array}\right. \rightarrow \frac{x}{y} = ,input">
+            <param name="latex3" value="\left[ \begin{array}{l} x = \frac{3}{4}=\\ y = \frac{5}{6}\end{array}\right. \rightarrow \frac{x}{y} = ,input">
 	    <param name="latex4" value="#00af0f">
             <param name="latex5" value="#ff00ff,\left\{ \begin{array}{l} x = \frac{3}{4} \\ y = \frac{5}{6} \\ z = \frac{\pi}{\sqrt{2}}\end{array}\right \rightarrow \frac{x}{y} = ,input,\rightarrow,#ffffff, z \cdot \frac{x}{y} = ,input">
 	    <!-- optional -->
@@ -44,9 +44,9 @@
 	    <param name="latex_bgcolor" value="0,0,255"><!-- rgb or #ffffff default white -->
 	    <param name="latex_fgcolor" value="255,0,0"><!-- rgb or #ffffff  default black -->
 	    <param name="latex_fontsize" value="18"><!-- rgb  or #ffffff  default black -->
-	    <param name="inputfield_width" value="120"><!-- int : default 10 : width in px of inputfield-->
+	    <param name="inputfield_width" value="120,340,120,30"><!-- int : first inputfield 120,second 230...default 60 : width in px of inputfield-->
 	    <param name="inputfield_height" value="40"><!-- optional int : default fontsize in px : height in px of inputfield-->
-	    <param name="inputfield_fontsize" value ="16"><!-- int : default 10 -->
+	    <param name="inputfield_fontsize" value ="26"><!-- int : default 10 -->
 	    <param name="inputfield_bgcolor" value="0,0,255"><!-- rgb or #ffffff  default white -->
 	    <param name="inputfield_fgcolor" value="255,0,0"><!-- rgb or #ffffff  default black -->
 	    <param name="inputfield_editable" value="1,0,1"><!-- field 1 is editable, field 2 is not_editable... default all editable -->
