@@ -1,3 +1,6 @@
+7/11/2011
+- different inputfield widths may be declared:<param name="inputfield_width" value="120,340,120,30"> default width for all fields :60px
+
 4/3/2011
 - Rewrite, changed param_syntax and improved usability (see test.html).
 - Use of a "," as tokenizer : do not use "\," , a half space in latexcode !!
